--- a/analyses/5community_climate_ecology/analyses/Step_0_data_transformations.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_0_data_transformations.Rmd
@@ -154,11 +154,14 @@ CCFRP_group_vars <- CCFRP_process %>%
 
 #define envr vars
 CCFRP_envr_vars <- CCFRP_process %>%
-    dplyr::select(c(SST="sst_monthly_anom",
+    dplyr::select(c(SST_anom="sst_monthly_anom",
+                    SST_abs = "sst_monthly_obs",
                   #CUTI="cuti_monthly_anom",
-                  BEUTI="beuti_monthly_anom",
+                  BEUTI_anom="beuti_monthly_anom",
+                  BEUTI_abs = "beuti_monthly_obs",
                   MOCI="annual_MOCI",
-                  BT = "bottomT_monthly_anom"))
+                  BT_anom = "bottomT_monthly_anom",
+                  BT_abs = "bottomT_monthly_obs"))
       
 
 #define data for ordination
@@ -185,11 +188,14 @@ kelp_invalg_group_vars <- kelp_invalg%>%
 
 #define envr vars
 kelp_invalg_envr_vars <-  kelp_invalg %>%
-  dplyr::select(c(SST="sst_monthly_anom",
+  dplyr::select(c(SST_anom="sst_monthly_anom",
+                    SST_abs = "sst_monthly_obs",
                   #CUTI="cuti_monthly_anom",
-                  BEUTI="beuti_monthly_anom",
+                  BEUTI_anom="beuti_monthly_anom",
+                  BEUTI_abs = "beuti_monthly_obs",
                   MOCI="annual_MOCI",
-                  BT = "bottomT_monthly_anom"))
+                  BT_anom = "bottomT_monthly_anom",
+                  BT_abs = "bottomT_monthly_obs"))
 
 
 #define data for ordination
@@ -212,7 +218,7 @@ kelp_invalg_distmat <-
 
 kelp_fish <- kelp_fish_cen %>%
                   rowwise() %>%
-                  dplyr::mutate(sum = sum(across(30:ncol(.), na.rm = T))) %>%
+                  dplyr::mutate(sum = sum(across(30:ncol(.)))) %>%
                   filter(!(sum==0))%>% #remove rows containing only zeros
                   dplyr::select(-sum) %>%
                   mutate(desig_state = paste(mpa_defacto_designation,MHW))%>%
@@ -226,11 +232,14 @@ kelp_fish_group_vars <- kelp_fish %>%
 
 #define envr vars
 kelp_fish_envr_vars <-  kelp_fish %>%
-    dplyr::select(c(SST="sst_monthly_anom",
+    dplyr::select(c(SST_anom="sst_monthly_anom",
+                    SST_abs = "sst_monthly_obs",
                   #CUTI="cuti_monthly_anom",
-                  BEUTI="beuti_monthly_anom",
+                  BEUTI_anom="beuti_monthly_anom",
+                  BEUTI_abs = "beuti_monthly_obs",
                   MOCI="annual_MOCI",
-                  BT = "bottomT_monthly_anom"))
+                  BT_anom = "bottomT_monthly_anom",
+                  BT_abs = "bottomT_monthly_obs"))
 
 #define data for ordination
 kelp_fish_ord_data <- kelp_fish %>%
@@ -255,7 +264,7 @@ kelp_fish_distmat <-
 
 kelp_swath <- kelp_swath_cen %>%
                   rowwise() %>%
-                  dplyr::mutate(sum = sum(across(30:ncol(.), na.rm = T))) %>%
+                  dplyr::mutate(sum = sum(across(30:ncol(.)))) %>%
                   filter(!(sum==0))%>% #remove rows containing only zeros
                   dplyr::select(-sum) %>%
                   mutate(desig_state = paste(mpa_defacto_designation,MHW))%>%
@@ -269,11 +278,14 @@ kelp_swath_group_vars <- kelp_swath %>%
 
 #define envr vars
 kelp_swath_envr_vars <-  kelp_swath %>%
-    dplyr::select(c(SST="sst_monthly_anom",
+   dplyr::select(c(SST_anom="sst_monthly_anom",
+                    SST_abs = "sst_monthly_obs",
                   #CUTI="cuti_monthly_anom",
-                  BEUTI="beuti_monthly_anom",
+                  BEUTI_anom="beuti_monthly_anom",
+                  BEUTI_abs = "beuti_monthly_obs",
                   MOCI="annual_MOCI",
-                  BT = "bottomT_monthly_anom"))
+                  BT_anom = "bottomT_monthly_anom",
+                  BT_abs = "bottomT_monthly_obs"))
 
 #define data for ordination
 kelp_swath_ord_data <- kelp_swath %>%
@@ -295,7 +307,7 @@ kelp_swath_distmat <-
 
 kelp_upc <- kelp_upc_cen %>%
                   rowwise() %>%
-                  dplyr::mutate(sum = sum(across(30:ncol(.), na.rm = T))) %>%
+                  dplyr::mutate(sum = sum(across(30:ncol(.)))) %>%
                   filter(!(sum==0))%>% #remove rows containing only zeros
                   dplyr::select(-sum) %>%
                   mutate(desig_state = paste(mpa_defacto_designation,MHW))%>%
@@ -309,11 +321,14 @@ kelp_upc_group_vars <- kelp_upc %>%
 
 #define envr vars
 kelp_upc_envr_vars <-  kelp_upc %>%
-    dplyr::select(c(SST="sst_monthly_anom",
+    dplyr::select(c(SST_anom="sst_monthly_anom",
+                    SST_abs = "sst_monthly_obs",
                   #CUTI="cuti_monthly_anom",
-                  BEUTI="beuti_monthly_anom",
+                  BEUTI_anom="beuti_monthly_anom",
+                  BEUTI_abs = "beuti_monthly_obs",
                   MOCI="annual_MOCI",
-                  BT = "bottomT_monthly_anom"))
+                  BT_anom = "bottomT_monthly_anom",
+                  BT_abs = "bottomT_monthly_obs"))
 
 #define data for ordination
 kelp_upc_ord_data <- kelp_upc %>%
@@ -334,7 +349,7 @@ kelp_upc_distmat <-
 
 deep_reef <- deep_reef_cen %>%
                   rowwise() %>%
-                  dplyr::mutate(sum = sum(across(31:ncol(.), na.rm = T))) %>%
+                  dplyr::mutate(sum = sum(across(31:ncol(.)))) %>%
                   filter(!(sum==0))%>% #remove rows containing only zeros
                   dplyr::select(-c(
                                 young_of_year_10_cm_sebastes_sp,
@@ -349,11 +364,14 @@ deep_reef_group_vars <- deep_reef%>%
 
 #define envr vars
 deep_reef_envr_vars <-  deep_reef %>%
-   dplyr::select(c(SST="sst_monthly_anom",
+   dplyr::select(c(SST_anom="sst_monthly_anom",
+                    SST_abs = "sst_monthly_obs",
                   #CUTI="cuti_monthly_anom",
-                  BEUTI="beuti_monthly_anom",
+                  BEUTI_anom="beuti_monthly_anom",
+                  BEUTI_abs = "beuti_monthly_obs",
                   MOCI="annual_MOCI",
-                  BT = "bottomT_monthly_anom"))
+                  BT_anom = "bottomT_monthly_anom",
+                  BT_abs = "bottomT_monthly_obs"))
 
 #define data for ordination
 deep_reef_ord_data <- deep_reef%>%
@@ -389,9 +407,11 @@ rocky_group_vars <- rocky_counts%>%
 
 #define envr vars
 rocky_envr_vars <-  rocky_counts %>%
-  dplyr::select(c(SST="sst_monthly_anom",
+  dplyr::select(c(SST_anom="sst_monthly_anom",
+                    SST_abs = "sst_monthly_obs",
                   #CUTI="cuti_monthly_anom",
-                  BEUTI="beuti_monthly_anom",
+                  BEUTI_anom="beuti_monthly_anom",
+                  BEUTI_abs = "beuti_monthly_obs",
                   MOCI="annual_MOCI"))
 
 #define data for ordination
@@ -486,7 +506,7 @@ message("Done processing rocky_ord")
 #export to .RData
 #save(CCFRP_ord, kelp_invalg_ord, kelp_fish_ord, deep_reef_ord, rocky_ord, file = file.path(output_path, "bray_nmds_scores.rda"))
 
-#save(CCFRP_en, kelp_invalg_en, kelp_fish_en, deep_reef_en, rocky_en, file = file.path(output_path, "env_fit_scores.rda"))
+#save(CCFRP_en, kelp_invalg_en, kelp_fish_en, deep_reef_en, rocky_en, file = file.path(output_path, "env_fit_scores_with_absolutes.rda"))
 
 ```
 
