--- a/analyses/5community_climate_ecology/analyses/Step_2_NMDS.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_2_NMDS.Rmd
@@ -30,7 +30,9 @@ library(here)
 #old dir
 #data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
 
-data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data"
+#data_path <- "/Volumes/GoogleDrive/.shortcut-targets-by-id/1kCsF8rkm1yhpjh2_VMzf8ukSPf9d4tqO/MPA Network Assessment: Working Group Shared Folder/data/sync-data/monitoring/processed_data/community_climate_derived_data/Chris_file_share" #Chris
+
+data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data" #Josh
 
 comm_data <- load(file.path(data_path, "comm_data.rda"))
 nmds_scores <- load(file.path(data_path, "bray_nmds_scores.rda"))
