--- a/analyses/5community_climate_ecology/analyses/Step_0_data_transformations.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_0_data_transformations.Rmd
@@ -35,6 +35,7 @@ kelp_combined <- read.csv(file.path(dat_dir, "kelp_swath_upc_mpa_year.csv"))
 kelp_fish <- read.csv(file.path(dat_dir, "kelp_fish_mpa_year.csv"))
 deep_reef <- read.csv(file.path(dat_dir, "deep_reef_mpa_year.csv"))
 rocky <- read.csv(file.path(dat_dir, "rocky_mpa_year.csv"))
+rocky_airtemp <- readRDS("/home/shares/ca-mpa/data/sync-data/environmental/processed/air_temp_intertidal_sites.rds")
 
 
 ```
@@ -389,10 +390,16 @@ deep_reef_distmat <-
 
 #Intertidal processing---------------------------------------------------------
 
+rocky_Tair <- rocky_airtemp %>% mutate(marine_site_name = tolower(marine_site_name)) %>%
+              ungroup() %>%
+              select(!c(georegion, site_code))
+
 rocky_cen$year <- as.numeric(as.character(rocky_cen$year))
 
 rocky_counts <- #rocky_count_enr %>%
                 rocky_cen %>%
+                left_join(rocky_Tair, by= c("site"="marine_site_name","year")) %>%
+                dplyr::select(year, group, region3, region4, site, mpa_designation, affiliated_mpa, AT_anom, AT_abs, everything()) %>%
                   mutate(MHW = ifelse(year>=2014 & year<=2016, "during",ifelse(year<2014, "before","after")))%>%
                   mutate(desig_state = paste(mpa_designation,MHW))%>%
                   dplyr::select(desig_state, MHW, everything())%>%
@@ -412,12 +419,14 @@ rocky_envr_vars <-  rocky_counts %>%
                   #CUTI="cuti_monthly_anom",
                   BEUTI_anom="beuti_monthly_anom",
                   BEUTI_abs = "beuti_monthly_obs",
-                  MOCI="annual_MOCI"))
+                  MOCI="annual_MOCI",
+                  AT_anom,
+                  AT_abs))
 
 #define data for ordination
 rocky_ord_data <- rocky_counts %>%
               ungroup() %>%
-              dplyr::select(26:ncol(.))
+              dplyr::select(28:ncol(.))
 
 #counts are already relative, so apply sqrt transform to match "hellinger
 rocky_rel <- rocky_ord_data %>%
@@ -429,7 +438,9 @@ rocky_distmat <-
 
 
 ###save group vars
-#output_path <-  "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data" 
+#output_path <-  "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data/reprocessed_data_20230615" #new
+#output_path <-  "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data/reprocessed_data_20230615" #old
+
 #save(CCFRP_group_vars,kelp_invalg_group_vars,kelp_fish_group_vars,
 #     kelp_swath_group_vars, kelp_upc_group_vars,
 #  deep_reef_group_vars,rocky_group_vars,
@@ -437,22 +448,22 @@ rocky_distmat <-
 
 #save community matrices
 #save(CCFRP_ord_data,kelp_invalg_ord_data,kelp_fish_ord_data,
-#     kelp_swath_ord_data, kelp_upc_ord_data,
-#   deep_reef_ord_data,rocky_ord_data,
-#   file = file.path(output_path, "comm_data.rda"))
+ #    kelp_swath_ord_data, kelp_upc_ord_data,
+  # deep_reef_ord_data,rocky_ord_data,
+  # file = file.path(output_path, "comm_data.rda"))
 
 
 #save envr vars 
 #save(CCFRP_envr_vars,kelp_invalg_envr_vars,kelp_fish_envr_vars,
-#     kelp_swath_envr_vars, kelp_upc_envr_vars,
+ #    kelp_swath_envr_vars, kelp_upc_envr_vars,
 #  deep_reef_envr_vars, rocky_envr_vars,
 #    file = file.path(output_path, "envr_vars.rda"))
 
 #save distance matrices
 #save(CCFRP_distmat,kelp_invalg_distmat,kelp_fish_distmat,
-#    kelp_swath_distmat, kelp_upc_distmat,
-#     deep_reef_distmat,rocky_distmat,
-#    file = file.path(output_path, "distance_matrices_BC.rda"))
+ #   kelp_swath_distmat, kelp_upc_distmat,
+  #   deep_reef_distmat,rocky_distmat,
+  #  file = file.path(output_path, "distance_matrices_BC.rda"))
 ```
 
 
